fix z-index

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -221,7 +221,7 @@ table {
 //
 #site-header {
   position: fixed;
-  z-index: 1;
+  z-index: 99;
   bottom: 0;
   width: 100%;
   box-sizing: border-box;
@@ -332,7 +332,7 @@ table {
   right: 1.5em;
   display: none;
   padding: .6em 1.8em;
-  z-index: 1;
+  z-index: 99;
   box-sizing: border-box;
   box-shadow: -1px -2px 3px 0px rgba(0, 0, 0, 0.45);
   background-color: $c-neutral-light;
